--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,171 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-			  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-			  crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<head>
+  <!-- Site Tittle -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Academia Blockchain</title>
+
+    {% block extra_head %}
+    {% endblock extra_head %}
+
+  <!-- Plugins css Style -->
+  <link href="{% static 'assets/plugins/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/plugins/no-ui-slider/nouislider.min.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/plugins/owl-carousel/owl.carousel.min.css' %}" rel="stylesheet" media="screen">
+  <link href="{% static 'assets/plugins/owl-carousel/owl.theme.default.min.css' %}" rel="stylesheet" media="screen">
+  <link href="{% static 'assets/plugins/fancybox/jquery.fancybox.min.+css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/plugins/isotope/isotope.min.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/plugins/animate/animate.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/plugins/select2/css/select2.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/plugins/revolution/css/settings.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/plugins/revolution/css/layers.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/plugins/revolution/css/navigation.css' %}" rel="stylesheet">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700|Open+Sans:300,400,600,700" rel="stylesheet">
+
+  <!-- Custom css -->
+  <link href="{% static 'assets/css/kidz.css' %}" id="option_style" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link href="{% static 'assets/img/favicon.png' %}" rel="shortcut icon">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
 </head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'html_course_index' %}">Courses</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'html_create_course' %}">Create Course</a>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'exams_index' %}">Exams</a>
-                    </li>
-                    <li class="nav-item dropdown ml-md-auto">
-                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            {% block content %}
-            {% endblock content %}
-        </div>
+
+<body id="body" class="up-scroll">
+<!-- ====================================
+  ——— PRELOADER
+  ===================================== -->
+  <div id="preloader" class="smooth-loader-wrapper">
+    <div class="smooth-loader">
+      <div class="loader">
+        <span class="dot dot-1"></span>
+        <span class="dot dot-2"></span>
+        <span class="dot dot-3"></span>
+        <span class="dot dot-4"></span>
+      </div>
     </div>
+  </div>
+
+  <!-- ====================================
+  ——— HEADER
+  ===================================== -->
+  <header class="header" id="pageTop">
+    <!-- Top Color Bar -->
+    <div class="color-bars">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col color-bar bg-warning d-none d-md-block"></div>
+          <div class="col color-bar bg-success d-none d-md-block"></div>
+          <div class="col color-bar bg-danger d-none d-md-block"></div>
+          <div class="col color-bar bg-info d-none d-md-block"></div>
+          <div class="col color-bar bg-purple d-none d-md-block"></div>
+          <div class="col color-bar bg-pink d-none d-md-block"></div>
+          <div class="col color-bar bg-warning"></div>
+          <div class="col color-bar bg-success"></div>
+          <div class="col color-bar bg-danger"></div>
+          <div class="col color-bar bg-info"></div>
+          <div class="col color-bar bg-purple"></div>
+          <div class="col color-bar bg-pink"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img class="d-inline-block" src="{% static 'assets/img/academa_blockchain_logo.png' %}" alt="Academia Blockchain">
+        </a>
+
+        <button class="navbar-toggler py-2" type="button" data-toggle="collapse" data-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fa fa-bars"></i>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ml-lg-auto">
+
+            <li class="nav-item dropdown bg-success">
+              <a class="nav-link dropdown-toggle {{ exam_index_active }}" href="{% url 'exam_index' %}">
+                <i class="fa fa-home nav-icon" aria-hidden="true"></i>
+                <span>Acreditaciones</span>
+              </a>
+            </li>
+
+            <li class="nav-item dropdown bg-warning">
+              <a class="nav-link dropdown-toggle {{ course_index_active }}" href="{% url 'course_index' %}">
+                <i class="fa fa-pencil-square-o nav-icon" aria-hidden="true"></i>
+                <span>Cursos</span>
+              </a>
+            </li>
+
+            <li class="nav-item dropdown bg-info">
+              <a class="nav-link dropdown-toggle {{ content_index_active }}" href="{% url 'content' %}">
+                <i class="fa fa-cubes nav-icon" aria-hidden="true"></i>
+                <span>Contenido</span>
+              </a>
+            </li>
+
+            <li class="nav-item dropdown bg-danger">
+              <a class="nav-link dropdown-toggle {{ profile_index_active }}" href="{% url 'profile_data' %}">
+                <i class="fa fa-user nav-icon" aria-hidden="true"></i>
+                <span>Perfil</span>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+    <div class="main-wrapper about-us">
+        {% block content %}
+        {% endblock content %}
+    </div>
+
+<!-- Javascript -->
+<script src="{% static 'assets/plugins/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'assets/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'assets/plugins/owl-carousel/owl.carousel.min.js' %}"></script>
+<script src="{% static 'assets/plugins/fancybox/jquery.fancybox.min.js' %}"></script>
+<script src="{% static 'assets/plugins/isotope/isotope.min.js' %}"></script>
+<script src="{% static 'assets/plugins/syotimer/jquery.syotimer.min.js' %}"></script>
+<script src="{% static 'assets/plugins/select2/js/select2.min.js' %}"></script>
+<script src="{% static 'assets/plugins/no-ui-slider/nouislider.min.js' %}"></script>
+<script src="{% static 'assets/plugins/lazyestload/lazyestload.js' %}"></script>
+<script src="{% static 'assets/plugins/velocity/velocity.min.js' %}"></script>
+<script src="{% static 'assets/plugins/images-loaded/js/imagesloaded.pkgd.min.js' %}"></script>
+<script src="{% static 'assets/plugins/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
+<script src="{% static 'assets/plugins/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
+
+
+<!-- Load revolution slider only on Local File Systems. The following part can be removed on Server -->
+<!--
+<script src="assets/plugins/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+<script src="assets/plugins/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+<script src="assets/plugins/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+-->
+{% block extra_js %}
+{% endblock extra_js %}
+
+<script src="{% static 'assets/plugins/wow/wow.min.js' %}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU79W1lu5f6PIiuMqNfT1C6M0e_lq1ECY"></script>
+
+<script src="{% static 'assets/js/kidz.js' %}"></script>
 </body>
 
 </html>
