--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -5,7 +5,7 @@
   <!-- ====================================
   ———	BREADCRUMB
   ===================================== -->
-  <section class="breadcrumb-bg" style="background-image: url('https://www.ibm.com/blogs/blockchain/wp-content/uploads/2019/01/Retina_Display-912158954.jpg'); ">
+  <section class="breadcrumb-bg" style="background-image: url('https://www.legalexecutiveinstitute.com/wp-content/uploads/2016/04/blockchain.jpg'); ">
     <div class="container">
       <div class="breadcrumb-holder">
         <div>
@@ -214,5 +214,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU79W1lu5f6PIiuMqNfT1C6M0e_lq1ECY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 {% endblock extra_js %}
