--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="{% url 'exam_index' %}">
           <img class="d-inline-block" src="{% static 'assets/img/academa_blockchain_logo.png' %}" alt="Academia Blockchain">
         </a>
 
