--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -40,7 +40,11 @@
 			</div>
 		</form>
         <p>Configura tu perfil para localizar el mapa en tu ciudad / Cambiar localizacion del mapa</p>
-        <div class="mb-10" id="map" style="width:100%; height:420px;"></div>
+
+        <div class="media mb-5">
+            <img src= "https://miro.medium.com/max/4064/1*qYUvh-EtES8dtgKiBRiLsA.png" alt="Image">
+        </div>
+{#        <div class="mb-10" id="map" style="width:100%; height:420px;"></div>#}
         <h2 class="text-capitalize text-muted font-weight-bold mb-0">Ultimamente: </h2>
 	</div>
 </section>
