--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <link href="{% static 'assets/plugins/no-ui-slider/nouislider.min.css' %}" rel="stylesheet" />
   <link href="{% static 'assets/plugins/owl-carousel/owl.carousel.min.css' %}" rel="stylesheet" media="screen">
   <link href="{% static 'assets/plugins/owl-carousel/owl.theme.default.min.css' %}" rel="stylesheet" media="screen">
-  <link href="{% static 'assets/plugins/fancybox/jquery.fancybox.min.+css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/plugins/fancybox/jquery.fancybox.min.css' %}" rel="stylesheet" />
   <link href="{% static 'assets/plugins/isotope/isotope.min.css' %}" rel="stylesheet" />
   <link href="{% static 'assets/plugins/animate/animate.css' %}" rel="stylesheet">
   <link href="{% static 'assets/plugins/select2/css/select2.min.css' %}" rel="stylesheet">
