--- a/templates/profiles/profile_accreditations.html
+++ b/templates/profiles/profile_accreditations.html
@@ -58,7 +58,7 @@
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_security' %}">Seguridad</a>
 							</li>
 							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_courses' %}">Cursos y Eventos</a>
+								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_events' %}">Cursos y Eventos</a>
 							</li>
 							<li class="my-2">
 								<a class="text-dark text-underline font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_accreditation' %}">Acreditaciones</a>
