--- a/templates/profiles/profile_content.html
+++ b/templates/profiles/profile_content.html
@@ -16,46 +16,46 @@
 
                     <div class="media media-avator-view flex-column flex-sm-row">
                       <div class="media-body">
-                        <a class="font-size-20 font-weight-medium d-inline-block mb-1" href="teachers-details.html">Tu Contenido</a>
+                        <a class="font-size-20 font-weight-medium d-inline-block mb-1" href="teachers-details.html">PROXIMAMENTE - Tu Contenido</a>
 
                              <span class="text-muted font-size-15 mb-1 d-block">
                                  Guarda contenido de manera descentralizada y forma parte del movimiento por un Internet libre. Un miembro del equipo de Acadmia Blockchain validará el contenido.
                                  Luego, podrás vincularlo con un curso/evento que organices o con un proceso de certificación.
                              </span>
 
-                          <hr>
+{#                          <hr>#}
                       </div>
                     </div>
-                <form>
-                    <div class="row">
-                      <div class="col-12">
-                        <div class="form-group form-group-icon">
-                          <i class="fa fa-smile-o"></i>
-                          <input type="text" class="form-control border-info" placeholder="Link a contenido guardado en Storj, LBRY, IPFS o SWARM">
-                        </div>
-                      </div>
-
-                      <div class="col-12">
-                        <div class="form-group form-group-icon">
-                          <textarea class="form-control border-info" placeholder="Descripción del contenido guardado" rows="3"></textarea>
-                        </div>
-                      </div>
-
-                      <div class="col-12">
-                        <div class="text-sm-center mt-6">
-                          <button type="submit" class="btn btn-danger text-uppercase">
-                            Guardar Cambios
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
+{#                <form>#}
+{#                    <div class="row">#}
+{#                      <div class="col-12">#}
+{#                        <div class="form-group form-group-icon">#}
+{#                          <i class="fa fa-smile-o"></i>#}
+{#                          <input type="text" class="form-control border-info" placeholder="Link a contenido guardado en Storj, LBRY, IPFS o SWARM">#}
+{#                        </div>#}
+{#                      </div>#}
+{##}
+{#                      <div class="col-12">#}
+{#                        <div class="form-group form-group-icon">#}
+{#                          <textarea class="form-control border-info" placeholder="Descripción del contenido guardado" rows="3"></textarea>#}
+{#                        </div>#}
+{#                      </div>#}
+{##}
+{#                      <div class="col-12">#}
+{#                        <div class="text-sm-center mt-6">#}
+{#                          <button type="submit" class="btn btn-danger text-uppercase">#}
+{#                            Guardar Cambios#}
+{#                          </button>#}
+{#                        </div>#}
+{#                      </div>#}
+{#                    </div>#}
+{#                  </form>#}
 
                 <div class="media media-avator-view flex-column flex-sm-row">
                       <div class="media-body">
                           <hr>
                          <span class="text-muted font-size-15 mb-1 d-block">
-                             Próximamente: Podrás subir contenido a la cadena de bloques descentralizada de tu preferencia a través de Academia Blockchain. <i class="fa fa-smile-o"></i>
+                             Próximamente: Podrás subir contenido a las soluciones descentralizadas de tu preferencia a través de Academia Blockchain. <i class="fa fa-smile-o"></i>
                          </span>
                       </div>
                 </div>
@@ -75,7 +75,7 @@
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_security' %}">Seguridad</a>
 							</li>
 							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_courses' %}">Cursos y Eventos</a>
+								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_events' %}">Cursos y Eventos</a>
 							</li>
 							<li class="my-2">
 								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_accreditation' %}">Acreditaciones</a>
