--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Academia Blockchain</title>
 
-    {% block extra_head %}
-    {% endblock extra_head %}
-
   <!-- Plugins css Style -->
   <link href="{% static 'assets/plugins/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/plugins/no-ui-slider/nouislider.min.css' %}" rel="stylesheet" />
@@ -25,6 +22,8 @@
   <link href="{% static 'assets/plugins/revolution/css/settings.css' %}" rel="stylesheet">
   <link href="{% static 'assets/plugins/revolution/css/layers.css' %}" rel="stylesheet">
   <link href="{% static 'assets/plugins/revolution/css/navigation.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700|Open+Sans:300,400,600,700" rel="stylesheet">
@@ -42,6 +41,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+
+    {% block extra_head %}
+    {% endblock extra_head %}
 </head>
 
 <body id="body" class="up-scroll">
@@ -83,10 +85,10 @@
       </div>
     </div>
 
-    <!-- Navbar -->
+    <!-- Navbar -->+
     <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'exam_index' %}">
+        <a class="navbar-brand" href="{% url 'event_index' %}">
           <img class="d-inline-block" src="{% static 'assets/img/academa_blockchain_logo.png' %}" alt="Academia Blockchain">
         </a>
 
@@ -98,15 +100,8 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ml-lg-auto">
 
-            <li class="nav-item dropdown bg-success">
-              <a class="nav-link dropdown-toggle {{ exam_index_active }}" href="{% url 'exam_index' %}">
-                <i class="fa fa-home nav-icon" aria-hidden="true"></i>
-                <span>Acreditaciones</span>
-              </a>
-            </li>
-
             <li class="nav-item dropdown bg-warning">
-              <a class="nav-link dropdown-toggle {{ course_index_active }}" href="{% url 'course_index' %}">
+              <a class="nav-link dropdown-toggle {{ event_index_active }}" href="{% url 'event_index' %}">
                 <i class="fa fa-pencil-square-o nav-icon" aria-hidden="true"></i>
                 <span>Cursos</span>
               </a>
@@ -119,12 +114,28 @@
               </a>
             </li>
 
+            <li class="nav-item dropdown bg-success">
+                {% if user.is_authenticated %}
+                 <a class="nav-link dropdown-toggle {{ profile_index_active }}" href="{% url 'profile_data' %}">
+                    <i class="fa fa-user nav-icon" aria-hidden="true"></i>
+                    <span>{{ user.username }}</span>
+                 </a>
+                {% else %}
+                 <a class="nav-link dropdown-toggle" href="{% url 'login' %}">
+                    <i class="fa fa-user nav-icon" aria-hidden="true"></i>
+                    <span>Entrar</span>
+                 </a>
+                {% endif %}
+            </li>
+
+          {% if user.is_authenticated %}
             <li class="nav-item dropdown bg-danger">
-              <a class="nav-link dropdown-toggle {{ profile_index_active }}" href="{% url 'profile_data' %}">
-                <i class="fa fa-user nav-icon" aria-hidden="true"></i>
-                <span>Perfil</span>
+              <a class="nav-link dropdown-toggle" href="{% url 'logout' %}">
+                <i class="fa fa-sign-out nav-icon" aria-hidden="true"></i>
+                <span>Salir</span>
               </a>
             </li>
+          {% endif %}
 
           </ul>
         </div>
@@ -140,6 +151,7 @@
 <!-- Javascript -->
 <script src="{% static 'assets/plugins/jquery/jquery.min.js' %}"></script>
 <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script src="{% static 'assets/plugins/owl-carousel/owl.carousel.min.js' %}"></script>
 <script src="{% static 'assets/plugins/fancybox/jquery.fancybox.min.js' %}"></script>
 <script src="{% static 'assets/plugins/isotope/isotope.min.js' %}"></script>
@@ -151,7 +163,6 @@
 <script src="{% static 'assets/plugins/images-loaded/js/imagesloaded.pkgd.min.js' %}"></script>
 <script src="{% static 'assets/plugins/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
 <script src="{% static 'assets/plugins/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
-
 
 <!-- Load revolution slider only on Local File Systems. The following part can be removed on Server -->
 <!--
