--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -1,17 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'profiles/profile_base.html' %}
 
-{% block content %}
+{% block profile_content %}
 
-<div class="main-wrapper blog-grid-left-sidebar">
-
-
-<!-- ====================================
-———	BLOG GRID LEFT SIDEBAR
-===================================== -->
-<section class="py-8 py-md-10">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-lg-9 order-md-1">
+    <div class="col-md-8 col-lg-9 order-md-1">
 				<div class="row">
 
                     <div class="media media-avator-view flex-column flex-sm-row">
@@ -19,13 +10,13 @@
                           <div class="text-white rounded bg-warning text-uppercase font-weight-medium px-6 py-3 mb-3">Tus Certificados</div>
 
                          <div class="media media-list-view mb-5">
-                            <a class="media-img" href="{% url 'exam' %}">
+                            <a class="media-img" href="">
                                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimagens.mdig.com.br%2Fnatureza%2Fpinho_bonsai_Yamaki_02.jpg&f=1&nofb=1" alt="Image">
                             </a>
 
                             <div class="media-body">
                                 <h3 class="mb-3 mb-lg-2 mb-xl-3">
-                                    <a class="text-dark text-capitalize font-weight-bold" href="{% url 'exam' %}">
+                                    <a class="text-dark text-capitalize font-weight-bold" href="">
                                         Experto en Bonsais</a>
                                 </h3>
 
@@ -41,7 +32,7 @@
                                     pleasure itself.</p>
 
                                 <div class="">
-                                    <a class="btn btn-link text-hover-success text-underline pl-0" href="{% url 'exam' %}">
+                                    <a class="btn btn-link text-hover-success text-underline pl-0" href="">
                                         <i class="fa fa-angle-double-right mr-1" aria-hidden="true"></i> Leer más
                                     </a>
                                     <a class="btn btn-link text-hover-success text-underline pl-0" href="">
@@ -51,55 +42,55 @@
                             </div>
                         </div>
 
-                          <div class="text-white rounded bg-secondary text-uppercase font-weight-medium px-6 py-3 mb-3">Aplicaciones pendientes</div>
-                          <ul class="list-unstyled list-item-border-bottom">
-                            <li class="mb-4 pb-4">
-                              <div class="media">
-                                  <div class = "col-3">
-                                    <a class="mr-2" href="blog-single-left-sidebar.html">
-                                      <img class="rounded-lg w-100 border-warning border-2 d-block" data-src="assets/img/blog/blog-sm-img5.jpg"
-                                        src="https://httpsamc-a.akamaihd.net/3864268799001/3864268799001_4779366770001_1602-CocinaItalianaT2-RobertoSalvatore2.jpg?pubId=3864268799001&videoId=4048532764001">
-                                    </a>
-                                  </div>
-                                <div class="media-body">
-                                  <h5 class="line-hight-16 mb-1">
-                                    <p class="font-base font-size-14">
-                                          Cheff de Comida Italiana
-                                      </p>
-                                    <p class="font-base font-size-14" href="blog-single-left-sidebar.html">
-                                      <i class="fa fa-vcard-o mr-2" aria-hidden="true"></i> Giancomo Bruno</p>
-                                  </h5>
-                                    <button type="button" class="btn btn-danger text-uppercase">Retirar Aplicacion</button>
-                                </div>
-                              </div>
-                            </li>
-                          </ul>
-
-
-                          <div class="text-white rounded bg-secondary text-uppercase font-weight-medium px-6 py-3 mb-3">Aplicaciones pasadas</div>
-                          <ul class="list-unstyled list-item-border-bottom">
-                            <li class="mb-4 pb-4">
-                              <div class="media">
-                                  <div class = "col-3">
-                                    <a class="mr-2" href="blog-single-left-sidebar.html">
-                                      <img class="rounded-lg w-100 border-warning border-2 d-block" data-src="assets/img/blog/blog-sm-img5.jpg"
-                                        src="https://pbs.twimg.com/media/D3Vu0riUUAAYEav.jpg">
-                                    </a>
-                                  </div>
-                                <div class="media-body">
-                                  <h5 class="line-hight-16 mb-1">
-                                    <p class="font-base font-size-14">
-                                          Conocedor de Historia Mexicana
-                                      </p>
-                                    <p class="font-base font-size-14" href="blog-single-left-sidebar.html">
-                                      <i class="fa fa-vcard-o mr-2" aria-hidden="true"></i> Angel Mora</p>
-                                  </h5>
-                                    <button type="button" class="btn btn-success text-uppercase">Aplicar Nuevamente</button>
-                                    <button type="button" class="btn btn-danger text-uppercase">Eliminar</button>
-                                </div>
-                              </div>
-                            </li>
-                          </ul>
+{#                          <div class="text-white rounded bg-secondary text-uppercase font-weight-medium px-6 py-3 mb-3">Aplicaciones pendientes</div>#}
+{#                          <ul class="list-unstyled list-item-border-bottom">#}
+{#                            <li class="mb-4 pb-4">#}
+{#                              <div class="media">#}
+{#                                  <div class = "col-3">#}
+{#                                    <a class="mr-2" href="blog-single-left-sidebar.html">#}
+{#                                      <img class="rounded-lg w-100 border-warning border-2 d-block" data-src="assets/img/blog/blog-sm-img5.jpg"#}
+{#                                        src="https://httpsamc-a.akamaihd.net/3864268799001/3864268799001_4779366770001_1602-CocinaItalianaT2-RobertoSalvatore2.jpg?pubId=3864268799001&videoId=4048532764001">#}
+{#                                    </a>#}
+{#                                  </div>#}
+{#                                <div class="media-body">#}
+{#                                  <h5 class="line-hight-16 mb-1">#}
+{#                                    <p class="font-base font-size-14">#}
+{#                                          Cheff de Comida Italiana#}
+{#                                      </p>#}
+{#                                    <p class="font-base font-size-14" href="blog-single-left-sidebar.html">#}
+{#                                      <i class="fa fa-vcard-o mr-2" aria-hidden="true"></i> Giancomo Bruno</p>#}
+{#                                  </h5>#}
+{#                                    <button type="button" class="btn btn-danger text-uppercase">Retirar Aplicacion</button>#}
+{#                                </div>#}
+{#                              </div>#}
+{#                            </li>#}
+{#                          </ul>#}
+{##}
+{##}
+{#                          <div class="text-white rounded bg-secondary text-uppercase font-weight-medium px-6 py-3 mb-3">Aplicaciones pasadas</div>#}
+{#                          <ul class="list-unstyled list-item-border-bottom">#}
+{#                            <li class="mb-4 pb-4">#}
+{#                              <div class="media">#}
+{#                                  <div class = "col-3">#}
+{#                                    <a class="mr-2" href="blog-single-left-sidebar.html">#}
+{#                                      <img class="rounded-lg w-100 border-warning border-2 d-block" data-src="assets/img/blog/blog-sm-img5.jpg"#}
+{#                                        src="https://pbs.twimg.com/media/D3Vu0riUUAAYEav.jpg">#}
+{#                                    </a>#}
+{#                                  </div>#}
+{#                                <div class="media-body">#}
+{#                                  <h5 class="line-hight-16 mb-1">#}
+{#                                    <p class="font-base font-size-14">#}
+{#                                          Conocedor de Historia Mexicana#}
+{#                                      </p>#}
+{#                                    <p class="font-base font-size-14" href="blog-single-left-sidebar.html">#}
+{#                                      <i class="fa fa-vcard-o mr-2" aria-hidden="true"></i> Angel Mora</p>#}
+{#                                  </h5>#}
+{#                                    <button type="button" class="btn btn-success text-uppercase">Aplicar Nuevamente</button>#}
+{#                                    <button type="button" class="btn btn-danger text-uppercase">Eliminar</button>#}
+{#                                </div>#}
+{#                              </div>#}
+{#                            </li>#}
+{#                          </ul>#}
 
                       </div>
 
@@ -107,38 +98,5 @@
 				</div>
 			</div>
 
-			<div class="col-md-4 col-lg-3">
-				<div class="card shadow-none bg-transparent">
-					<h4 class="card-header font-weight-bold bg-success rounded-top text-white">Tu Perfil</h4>
-					<div class="card-body border border-top-0 rounded-bottom">
-						<ul class="list-unstyled mb-0">
-							<li class="mb-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_data' %}">Datos de Perfil</a>
-							</li>
-							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_security' %}">Seguridad</a>
-							</li>
-							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_courses' %}">Cursos y Eventos</a>
-							</li>
-							<li class="my-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_accreditation' %}">Acreditaciones</a>
-							</li>
-							<li class="mt-2">
-								<a class="text-dark text-underline font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_certificates' %}">Certificados</a>
-							</li>
-                            <li class="mt-2">
-								<a class="text-muted font-weight-medium d-block border rounded py-2 pl-3" href="{% url 'profile_content' %}">Contenido Descentralizado</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
-</section>
-
-</div> <!-- element wrapper ends -->
-
-{% endblock content %}
+{% endblock profile_content %}
