profile edit form

--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -154,10 +154,9 @@
                     Más detalles sobre la fecha y el horario.
                 </label>
                 <input type="text" class="form-control" id="" name="schedule_description"/>
-                <small id="passwordHelpBlock" class="form-text text-muted">
+                <small id="" class="form-text text-muted">
                     Una descripción extra sobre el calendario y la hora.
                 </small>
-
             </div>
 
             <button type="submit" class="btn btn-primary" id="submit_form">
