formulario editar contactos

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <!-- Navbar -->+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-scrollUp navbar-sticky navbar-white">
       <div class="container">
         <a class="navbar-brand" href="{% url 'event_index' %}">
